Fix calculator size bug
Adjusted css of calculator so that the height will adjust properly
when the display is stretched

--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ body {
 #calculator {
     border: lightgray solid 2px;
     flex-direction: column;
-    height: 500px;
-    width: auto;
+    height: auto;
+    width: 300px;
     gap: 4px;
     border: 2px solid gray;
     border-radius: 2px;
